cabal-version:      2.4
name:               adventofcode2022
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Fabian Meyer
maintainer:         fameyer@brita.net

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable adventofcode2022
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: 
        Calories
      , RockPaperScissors
      , Backpack
      , CampCleanup
      , SupplyStacks
      , TuningTrouble
      , PrettyPrint
      , NoSpaceLeft
      , TreetopTreeHouse
      , RopeBridge
      , CathodeRayTube

    extensions: 
        OverloadedStrings
      , RecordWildCards
      , DuplicateRecordFields
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0
                    , text
                    , split
                    , optparse-applicative
                    , prettyprinter
                    , containers
                    , parsec
                    , extra
    hs-source-dirs:   app
    default-language: Haskell2010
